# homa

./: 2017년도 가을학기 공과대학 국비 TA장학금 신청서.hwp  Untitled 1.odt  list_prog.txt  odfdf.c  todo.odt
42/libft/: .libft.h.swp  .testlibft.c.swp  Makefile  README  a.out  author  comp  cust  ex.sh  exec.sh  libft.h  list  main.cpp  rc.cpp  sh.sh  test  test.c  test.cpp  testlibft  testlibft.c
cam_project/: camp.py
code/: a.out  main.cpp  pthreadtest.cpp
code/prob1/: test.cpp
code/prob2/: a.out
crop/: DataManager.py  VOTParcer.py  checkFileList.py  keypress.py  okumaCrop.py  pickleProcessing.py
drone/: CMakeLists.txt  README.md  ctrl_att.cpp  package.xml
drone/launch/: ctrl_att_sitl.launch  ctrl_att_test.launch
drone/lib/: .endrun.cpp.swo  .endrun_wrapper_arduino.cpp.swp  UTM.h  conf.h  drone.cpp  drone.h
express/: GUIDE  app.js  package-lock.json  package.json
express/models/: MSkey.js
express/routes/: .parmod.js.swp  index.js  parmod.js
express/upload/: test.csv
express/views/: index.jade  layout.jade  search.jade  upload.jade  uploadByKey.jade  upload_prev.jade
face/: main.py
face/faces/: class.README
face/sounds/: make_voice.py
hrank/: a.out  coincal.py  test.cpp  test.py  tex.py
ict/: a.out  test.cpp
ict/LEFT/: .SerialPort.cpp.swp  (+5 more)
octave/: function_octave
qt-creator/: mv.sh
ros/: pix
svn/: svn.pptx  svn_command.txt  svncmd.sh  svncmd_sh_manual.txt
sync/: camera2log.txt  imu.py  sync.py
tmux/: .tmux_shortcut.swp  tmux_shortcut
tool/: Ubuntu_installation_guide.docx  filenameshell  list_prog.txt  octave-workspace  rtl8812au.README
(+399 files in other folders)
